2007-02-07 Jens Tkotz <jens@peino.de> 1.6-RC1-b23

 * Change: Removed function dismiss() from lib/content.php
 
 * Change: Tweaked dismissAndLoad() so the url param is optional
 		   and thus it behaves like dismiss() did.
 		   
 * Change: dismiss() was only used popups/edit_thumb.php
 
 * Change: Autowidth to 800px if Imagewidth is > 400
 
 * Change: Little layout for cropImageBox
 
2007-02-07 Jens Tkotz <jens@peino.de> 1.6-RC1-b22

 * Fix/Change: validate_albums
             - Some Links were broken
             - Explicit check for allowed invalid albums
             - Nicified output
             
2007-02-07 Jens Tkotz <jens@peino.de> 1.6-RC1-b21

 * Change: Defining a minimum size for cropping thumbs.
 		   Currently the fullsize image must be at least 25x25px
 		   
2007-02-06 Jens Tkotz <jens@peino.de> 1.6-RC1-b20

 * CHANGE:

  Removed Java Applet for cropping and added Javascript Cropper from
  David Spurr http://www.defusion.org.uk/
  Its using Prototype & script.aculo.us

  You can now crop thumbnails and the full Version.

2007-02-02 Jens Tkotz <jens@peino.de> 1.6-RC1-b19

 * Fix: Duplicate Accesskeys on startpage and thumbview.

2007-02-01 Jens Tkotz <jens@peino.de> 1.6-RC1-b18

 * Fix: Avoid warning in save_photos.php

 * Fix: There seems to be an album version issue.
        That causes a lot of warnings.
        An album version bump should do the trick.

 Thanks again to Peter Schumacher.

2007-02-01 Jens Tkotz <jens@peino.de> 1.6-RC1-b17

 * Fix: Uninitialized return value in locateDir
   Thanks to Peter Schumacher.

2007-02-01 Jens Tkotz <jens@peino.de> 1.6-RC1-b16

 * Change: PageTitle in photo was then Gallery.
           Now is <(sub)album title> :: <Image Name>

2007-01-31 Jens Tkotz <jens@peino.de> 1.6-RC1-b15

 * Fix: Bug #1305215, enhanced files that are treated as executable
        on win32.

2007-01-31 Jens Tkotz <jens@peino.de> 1.6-RC1-b14

 * Bug/RFE #1589714, Better errormessage which .htaccess is meant.
