@@ -1,3 +1,14 @@
+2007-02-07 Jens Tkotz <jens@peino.de> 1.6-RC1-b24
+
+ * Fix/Change:
+   
+   In postNuke 0.8, _PN_VERSION_NUM and _PN_VERSION_ID were renamed.
+   Leading _ is removed.
+   
+   Invented new global $GALLERY_POSTNUKE_VERSION, set in index.php
+
+ Thanks to 'tycho' from Forum.
+ 
 2007-02-07 Jens Tkotz <jens@peino.de> 1.6-RC1-b23
 
  * Change: Removed function dismiss() from lib/content.php
